--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -6,6 +6,8 @@ mainprefix = "z"
 author = "CVO Team - Mr. Zorn"
 url = "https://github.com/PulsarNeutronStar/CVO-Auxiliary"
 
+[binarize]
+enabled = false # Default: true
 
 [files]
 include = [
@@ -29,6 +31,8 @@ major = 0 # Overrides path when set
 minor = 1
 patch = 1
 git_hash = 4 # Default: 8
+
+
 
 
 [hemtt.launch.default]
