--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -7,7 +7,7 @@ author = "CVO Team - Mr. Zorn"
 url = "https://github.com/OverlordZorn/CVO-Auxiliary"
 
 [binarize]
-enabled = false # Default: true
+enabled = true # Default: true
 
 [files]
 include = [
@@ -27,10 +27,11 @@ exclude = [
 ]
 
 [version]
-major = 0 # Overrides path when set
-minor = 1
-patch = 1
-git_hash = 4 # Default: 8
+path = "addons/main/script_version.hpp" # Default
+# major = 0 # Overrides path when set
+# minor = 1
+# patch = 1
+# git_hash = 4 # Default: 8
 
 
 
@@ -49,8 +50,6 @@ optionals = [
 ]
 
 parameters = [
-    "-debug",
-    "-filePatching",
     "-window",
     "-noPause",
     "-noPauseAudio",
