--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 *.pbo
-.hemttout
+/.hemttout/*
 hemtt
 hemtt.exe
 *.biprivatekey
 .vscode
-releases/cvo_aux-latest.zip
-releases/cvo_aux-0.1.1-9515.zip
-/releases
+/releases/*
