--- a/.hemtt/launch.toml
+++ b/.hemtt/launch.toml
@@ -40,3 +40,7 @@ mission = "rockslide.Tanoa"
 [bigBoom]
 extends = "default"
 mission = "bigBoom.Altis"
+
+[ula]
+extends = "default"
+mission = "ULA-Dedicated-MP-Test.stratis"
