--- a/.hemtt/launch.toml
+++ b/.hemtt/launch.toml
@@ -44,3 +44,7 @@ mission = "bigBoom.Altis"
 [ula]
 extends = "default"
 mission = "ULA-Dedicated-MP-Test.stratis"
+
+[CSC]
+extends = "default"
+mission = "CSC.Altis"
