--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -27,3 +27,5 @@ jobs:
           git add .
           git commit -m "version Bump"
           git push
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
