--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Run HEMTT build
         run: hemtt script update_2_patch
       - name: Commit to Repo
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "version Bump"
+          git commit -m "[CI] Merge Version Bump"
           git push
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
