park merge workflow

--- a/tools/unused github actions/merge.yml
+++ b/tools/unused github actions/merge.yml
@@ -1,9 +1,9 @@
 name: Merge Version Bump
 
-# on:
-#  pull_request:
-#    types:
-#      - closed
+on:
+  pull_request:
+    types:
+      - closed
 
 permissions:
   contents: write
