--- a/.hemtt/launch.toml
+++ b/.hemtt/launch.toml
@@ -34,7 +34,7 @@ mission = "Stratis.Stratis"
 extends = "Stratis"
 workshop = ["2352603233"] # Greenmag
 
-[VR]
+[Test]
 extends = "default"
 mission = "exec.VR"
 
