--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -1,6 +1,6 @@
 name = "24th Chorni Voron - Auxiliary Mod"
 prefix = "cvo"
-mainprefix = "z"
+mainprefix = "zrn"
 
 [properties]
 author = "CVO Team - Mr. Zorn"
